# via-native-plugins

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ResultMetadata.md
ResourcesCMS/: CMS22050258.xml  SiliosCMSDescription.xml  Toucan_T4.xml
client/: CMakeLists.txt
client/include/: client.h  client.hpp  input.h  input.hpp  output.h  output.hpp
client/src/: client.cpp  initme.cpp  input.cpp  main.cpp
cmake/: conan_scan.cmake
plugins/: CMakeLists.txt
plugins/bajoran/include/: BajoranVideoSource.h
plugins/bajoran/include/gxf/common/: expected.hpp
plugins/bajoran/include/gxf/network/: tcp_codelet.hpp
plugins/bajoran/include/gxf/std/: block_memory_pool.hpp  tensor.hpp
plugins/bajoran/include/gxf/std/gems/utils/: time.hpp
plugins/bajoran/include/holoscan/: version_config.hpp
plugins/bajoran/src/: BajoranVideoSource.cpp
plugins/cms/: CMakeLists.txt  README.md
plugins/cms/include/: cms.h
plugins/cms/src/: cms.cpp  test.cpp
plugins/csharp/: CMakeLists.txt  README.md
plugins/csharp/CLI/: Bridge.cpp  Bridge.h  CMakeLists.txt  ResultOutput.cpp
plugins/csharp/Managed/: FrameGrabber.cs  Managed.csproj  Program.cs  ResultOutput.cs  ResultOutput.csproj  VideoSource.cs
plugins/csharp/Native/: CMakeLists.txt
plugins/csharp/Native/include/: ResultOutput.h  VideoSource.h
plugins/csharp/Native/src/: Main.cpp  Plugin.cpp  ResultOutput.cpp  VideoSource.cpp
plugins/csharp/ResultOutput/: ResultOutput.cs  ResultOutput.csproj
plugins/dummy/: CMakeLists.txt
plugins/dummy/include/: DummyVideoPlugin.h  dummy.h
plugins/dummy/src/: DummyVideoPlugin.cpp  dummy.cpp
plugins/dummy/test/: main.cpp
plugins/empty/: CMakeLists.txt
plugins/empty/include/: EmptyCameraDiscoverer.h  EmptyResultsOutput.h  EmptyVideoSource.h
plugins/empty/src/: initme.cpp  main.cpp
plugins/empty/test/: main.cpp
plugins/gstreamer/: CMakeLists.txt  README.md
plugins/gstreamer/include/: GStreamerVideoSource.h
plugins/gstreamer/src/: GStreamerVideoSource.cpp  Test.cpp
plugins/python/: CMakeLists.txt  README.md  myoutputplugin.py
plugins/python/PythonCamera/: CMakeLists.txt  PythonCamera.cpp  PythonCamera.h
plugins/python/PythonOutputAction/: CMakeLists.txt  PythonOutputAction.cpp  PythonOutputAction.h
plugins/python/include/: PythonPlugin.h
plugins/websocket/: CMakeLists.txt  README.md
plugins/websocket/include/: Input.h
plugins/websocket/include/websocket/: Client.h  Discoverer.h  Environment.h  Input.h  InputServer.h  JPG.h  Output.h  OutputServer.h  Server.h
plugins/websocket/servers/: CMakeLists.txt
plugins/websocket/servers/csharp/: CMakeLists.txt  README.md  VIAWS.sln
plugins/websocket/servers/csharp/Binaries/: .gitattributes
plugins/websocket/servers/csharp/Sources/: Server.cs  Test.cs
plugins/websocket/servers/csharp/Test/: Test.cs  Test.csproj
plugins/websocket/servers/csharp/VIAWS/: Server.cs  VIAWS.csproj
plugins/websocket/servers/include/websocket/: IOServer.h  Server.h
plugins/websocket/servers/src/: IOServer.cpp  Server.cpp  StandaloneServer.cpp
plugins/websocket/src/: Client.cpp  InitMe.cpp  Input.cpp  InputServer.cpp  JPG.cpp  OutputServer.cpp  Server.cpp  main.cpp
plugins/websocket/src/client/: CMakeLists.txt
plugins/websocket/src/client/include/: Input.h  Output.h  client.h  input.h  output.h
plugins/websocket/src/client/src/: Client.cpp  InitMe.cpp  client.cpp  input.cpp  main.cpp
plugins/websocket/src/server/: CMakeLists.txt
plugins/websocket/src/server/include/: Server.h
plugins/websocket/src/server/src/: Server.cpp  main.cpp  server.cpp
plugins/websocket/test/: CMakeLists.txt  Client.cpp  Discoverer.cpp  FullSequence.cpp  Init.cpp  Input.cpp  Output.cpp  Unit.cpp
plugins/websocket/tools/: CMakeLists.txt  StandaloneInputServer.cpp  StandaloneOutputServer.cpp
server/: CMakeLists.txt
server/include/: html_server.hpp  server.h  server.hpp
server/src/: main.cpp  server.cpp
stub/: CMakeLists.txt
stub/include/: CMakeLists.txt
stub/include/neurala/: README.md  exports.h
stub/include/neurala/algorithms/math/: utils.h
stub/include/neurala/concurrency/: Mutex.h
stub/include/neurala/config/: os.h
stub/include/neurala/cppcompat/: typetraits.h
stub/include/neurala/error/: B4BError.h  ErrorCode.h  Exception.h  assert.h
stub/include/neurala/image/: ColorSpace.h  ImageDataLayout.h  ImageMetadata.h  ImageMetadataDTO.h
stub/include/neurala/image/dto/: ImageMetadata.h
stub/include/neurala/image/views/: ImageView.h
stub/include/neurala/image/views/dto/: ImageView.h
stub/include/neurala/image/views/memoryStrategy/: Contiguous.h
stub/include/neurala/meta/: Datatype.h  SourceLocation.h  enum.h
stub/include/neurala/meta/detail/: demangle.h  typeName.h
stub/include/neurala/neural/: DataRange.h
stub/include/neurala/plugin/: NeuralaPluginStatus.h  PluginArguments.h  PluginBindings.h  PluginErrorCallback.h  PluginManager.h  PluginRegistrar.h  PluginStatus.h
stub/include/neurala/utils/: Option.h  Options.h  ResultsOutput.h  Version.h  demangle.h  getLine.h  string.h
stub/include/neurala/utils/detail/: AnyRef.h
stub/include/neurala/video/: CameraDiscoverer.h  CameraInfo.h  VideoSink.h  VideoSource.h  VideoSourceStatus.h
stub/include/neurala/video/dto/: CameraInfo.h
stub/src/: B4BError.cpp  ErrorCode.cpp  Exception.cpp  NeuralaPluginStatus.cpp  Option.cpp  Options.cpp  PluginManager.cpp  PluginRegistrar.cpp  PluginStatus.cpp  ResultsOutput.cpp  VideoSourceStatus.cpp  demangle.cpp
websocket/: CMakeLists.txt
websocket/csharp/: Makefile
websocket/csharp/Sources/: Server.cs  Test.cs
websocket/include/websocket/: Client.h  Discoverer.h  Environment.h  Input.h  Output.h
websocket/src/: Client.cpp  InitMe.cpp  Input.cpp
websocket/test/: Client.cpp  FullSequence.cpp  Init.cpp  Input.cpp
